syntax = "proto3";

package auth;

message User {
  optional string id = 1;
  optional string userEmail = 2;
}

message CreateUserDto {
  string userEmail = 1;
  string password = 2;
}

message LoginUserDto {
  string userEmail = 1;
  string password = 2;
}

message Token {
  string token =1 ;
}

service AuthService {
  rpc SignUpUser (CreateUserDto) returns (User) {}
  rpc Login (LoginUserDto) returns (Token) {}
}